Changed icon sizes in button components

--- a/src/app/shared/components/buttons/standard-btn/standard-btn.component.html
+++ b/src/app/shared/components/buttons/standard-btn/standard-btn.component.html
@@ -2,7 +2,8 @@
   class="main-icon"
   *ngIf="mainIcon"
   [name]="mainIcon"
-  [color]="iconColor"></app-svg-icon>
+  [color]="iconColor"
+  [size]="'1em'"></app-svg-icon>
 
 <span class="label">{{ text }}</span>
 
