--- a/src/app/shared/components/buttons/round-btn/round-btn.component.html
+++ b/src/app/shared/components/buttons/round-btn/round-btn.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="icon; else withoutIcon">
-  <app-svg-icon class="icon" [name]="icon" [size]="'2em'"></app-svg-icon>
+  <app-svg-icon class="icon" [name]="icon" [size]="iconSize"></app-svg-icon>
 </ng-container>
 
 <ng-template #withoutIcon>
