Add surface color to theme style

--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -5,6 +5,9 @@ $base-color: #bb3e00;
 $on-base-color: #f8ebe5;
 
 // Card
-$card-color: #f6f6f6;
+$card-color: #fff;
 $on-card-color: #494848;
 $box-shadow-color: #949da640;
+
+// Surface
+$surface-color: #f6f6f6;
