--- a/src/app/delivery/top-bar/top-bar.component.html
+++ b/src/app/delivery/top-bar/top-bar.component.html
@@ -1,3 +1,7 @@
 <div class="top-bar">
   <app-top-bar-logo></app-top-bar-logo>
+
+  <div class="top-bar__options">
+    <app-top-bar-location></app-top-bar-location>
+  </div>
 </div>
