--- a/src/app/delivery/top-bar/top-bar.component.html
+++ b/src/app/delivery/top-bar/top-bar.component.html
@@ -3,5 +3,6 @@
 
   <div class="top-bar__options">
     <app-top-bar-location></app-top-bar-location>
+    <app-top-bar-languages></app-top-bar-languages>
   </div>
 </div>
