Changed name of top bar locations in delivery

--- a/src/app/delivery/top-bar/top-bar.component.html
+++ b/src/app/delivery/top-bar/top-bar.component.html
@@ -2,7 +2,7 @@
   <app-top-bar-logo></app-top-bar-logo>
 
   <div class="top-bar__options">
-    <app-top-bar-location></app-top-bar-location>
+    <app-top-bar-locations></app-top-bar-locations>
     <app-top-bar-languages></app-top-bar-languages>
   </div>
 </div>
