Created hours btn in top bar component in delivery

--- a/src/app/delivery/top-bar/top-bar.component.html
+++ b/src/app/delivery/top-bar/top-bar.component.html
@@ -3,6 +3,7 @@
 
   <div class="top-bar__options">
     <app-top-bar-locations></app-top-bar-locations>
+    <app-top-bar-hours></app-top-bar-hours>
     <app-top-bar-languages></app-top-bar-languages>
   </div>
 </div>
