Created headers for dishes lsit

--- a/src/styles/base/_theme.scss
+++ b/src/styles/base/_theme.scss
@@ -7,6 +7,7 @@ $on-base-color: #f8ebe5;
 // Card
 $card-color: #fff;
 $on-card-color: #494848;
+$on-card-second-color: #cccccc;
 $box-shadow-color: #949da640;
 
 // Surface
