--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Rokkitt:wght@300&display=swap');
 
 $roboto-font: 'Roboto', sans-serif;
@@ -37,7 +37,8 @@ h4 {
 p {
   font-size: 1em;
   font-weight: 400;
-  letter-spacing: 0.25%;
+  line-height: 130%;
+  letter-spacing: 0.75%;
   margin: 0;
 }
 
